# Computer-Graphics

./: README.md
task01-window/: CMakeLists.txt  ReadMe!!!!!!!!!!!!!!!!!!!!!!!!!!!.txt
task01-window/src/: main.cpp
task02-triangle/: CMakeLists.txt
task02-triangle/src/: main.cpp
task03-quad/: CMakeLists.txt
task03-quad/src/: main.cpp
task04-sphere/: CMakeLists.txt
task04-sphere/include/: shader.h
task04-sphere/res/shader/: task3.fs  task3.vs
task04-sphere/src/: main.cpp  shader.cpp
task05-model/: CMakeLists.txt
task05-model/include/: Mesh.h
task05-model/res/shader/: Model.fs  Model.vs
task05-model/src/: Camera.cpp  Mesh.cpp  main.cpp
task06-cube/: CMakeLists.txt
task06-cube/include/: shader.h
task06-cube/res/shader/: task-cube.vs
task06-cube/src/: main.cpp
task07-camera/: CMakeLists.txt
task07-camera/include/: Texture.h
task07-camera/res/shader/: task-camera.fs
task07-camera/src/: Camera.cpp  main.cpp
task08-phong/: CMakeLists.txt
task08-phong/include/: Camera.h  Light.h
task08-phong/res/shader/: DrawCube.fs  DrawCube.vs  DrawLamp.fs
task08-phong/src/: Camera.cpp  Light.cpp  main.cpp
task09-skybox/: CMakeLists.txt
task09-skybox/include/: Shader.h
task09-skybox/res/shader/: cubemap.fs  cubemap.vs  skybox.vs
task09-skybox/src/: Shader.cpp  main.cpp
task10-tangent/: CMakeLists.txt
task10-tangent/include/: Camera.h  Shader.h
task10-tangent/res/shader/: normal.fs  normal.vs  normal_tangent.fs  normal_tangent.vs
task10-tangent/src/: Camera.cpp  Texture.cpp  main.cpp
task11-shadow/: CMakeLists.txt
task11-shadow/include/: Mesh.h  Model.h  Texture.h
task11-shadow/res/model/: character.mtl
task11-shadow/res/shader/: DrawScene.fs  DrawScene.vs  ShadowMap.fs  ShadowMap.vs  debugDepthQuad.fs  debugDepthQuad.vs
task11-shadow/src/: main.cpp
task12-blending/: CMakeLists.txt
task12-blending/include/: Texture.h
task12-blending/res/shader/: blending.fs
task12-blending/src/: main.cpp
task13-deferred/: CMakeLists.txt
task13-deferred/include/: Camera.h  Model.h
task13-deferred/res/models/: character.mtl
task13-deferred/res/shader/: deferred_shading.fs  g_buffer.fs
task13-deferred/src/: Model.cpp  main.cpp
task14-particle/task-particle1/: CMakeLists.txt
task14-particle/task-particle1/src/: Shader.cpp  main.cpp
task14-particle/task-particle2/: CMakeLists.txt
(+6 files in other folders)
